--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "devDependencies": {
     "@tailwindcss/cli": "^4.1.12",
     "daisyui": "^5.0.50",
+    "prettier": "3.6.2",
     "tailwindcss": "^4.1.12"
   },
   "name": "notes-app",
