--- a/package.json
+++ b/package.json
@@ -5,8 +5,11 @@
   "devDependencies": {
     "@tailwindcss/cli": "^4.1.12",
     "daisyui": "^5.0.50",
+    "html-webpack-plugin": "^5.6.4",
     "prettier": "3.6.2",
-    "tailwindcss": "^4.1.12"
+    "tailwindcss": "^4.1.12",
+    "webpack": "^5.101.2",
+    "webpack-cli": "^6.0.1"
   },
   "name": "notes-app",
   "version": "1.0.0",
