--- a/package.json
+++ b/package.json
@@ -1,28 +1,37 @@
 {
-  "scripts": {
-    "build:css": "npx @tailwindcss/cli -i app.css -o public/styles/styles.css && npx prettier . --write"
-  },
-  "devDependencies": {
-    "@tailwindcss/cli": "^4.1.12",
-    "@tailwindcss/typography": "^0.5.16",
-    "daisyui": "^5.0.50",
-    "html-webpack-plugin": "^5.6.4",
-    "prettier": "3.6.2",
-    "tailwindcss": "^4.1.12",
-    "webpack": "^5.101.2",
-    "webpack-cli": "^6.0.1"
-  },
   "name": "notes-app",
   "version": "1.0.0",
   "description": "Fundamental Front-End Web Development",
+  "keywords": [],
+  "author": "Akhsaul",
+  "license": "ISC",
+  "scripts": {
+    "build": "webpack --config webpack.prod.js",
+    "start-dev": "webpack serve --config webpack.dev.js",
+    "build:css": "npx @tailwindcss/cli -i app.css -o public/styles/styles.css && npx prettier . --write"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.28.3",
+    "@babel/preset-env": "^7.28.3",
+    "@tailwindcss/cli": "^4.1.12",
+    "@tailwindcss/typography": "^0.5.16",
+    "babel-loader": "^10.0.0",
+    "copy-webpack-plugin": "^13.0.1",
+    "css-loader": "^7.1.2",
+    "daisyui": "^5.0.50",
+    "html-webpack-plugin": "^5.6.4",
+    "prettier": "3.6.2",
+    "style-loader": "^4.0.0",
+    "tailwindcss": "^4.1.12",
+    "webpack": "^5.101.3",
+    "webpack-cli": "^6.0.1",
+    "webpack-dev-server": "^5.2.2",
+    "webpack-merge": "^6.0.1"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/akhsaul/Notes-App.git"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "type": "commonjs",
   "bugs": {
     "url": "https://github.com/akhsaul/Notes-App/issues"
   },
