--- a/package.json
+++ b/package.json
@@ -8,7 +8,12 @@
   "scripts": {
     "build": "webpack --config webpack.prod.js",
     "start-dev": "webpack serve --config webpack.dev.js",
-    "build:css": "npx @tailwindcss/cli -i app.css -o public/styles/styles.css && npx prettier . --write"
+    "build:css": "npx @tailwindcss/cli -i app.css -o src/styles/styles.css --minify",
+    "format": "npx prettier src/**/* --write",
+    "analyzer": "webpack --config webpack.analyzer.js"
+  },
+  "dependencies": {
+    "animejs": "^4.1.3"
   },
   "devDependencies": {
     "@babel/core": "^7.28.3",
@@ -20,10 +25,12 @@
     "css-loader": "^7.1.2",
     "daisyui": "^5.0.50",
     "html-webpack-plugin": "^5.6.4",
+    "mini-css-extract-plugin": "^2.9.4",
     "prettier": "3.6.2",
     "style-loader": "^4.0.0",
     "tailwindcss": "^4.1.12",
     "webpack": "^5.101.3",
+    "webpack-bundle-analyzer": "^4.10.2",
     "webpack-cli": "^6.0.1",
     "webpack-dev-server": "^5.2.2",
     "webpack-merge": "^6.0.1"
